--- a/requirements_mine.txt
+++ b/requirements_mine.txt
@@ -17,7 +17,7 @@ boltons==23.0.0
 cachetools==5.3.0
 certifi==2023.5.7
 cffi==1.15.1
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1678108872112/work
+charset-normalizer
 click==8.1.3
 cloudpickle==2.2.1
 comm==0.1.3
@@ -35,7 +35,7 @@ einops==0.6.1
 etils==1.3.0
 executing==1.2.0
 fastjsonschema==2.16.3
-filelock @ file:///croot/filelock_1672387128942/work
+filelock
 flatbuffers==23.5.26
 fonttools==4.39.4
 frozenlist==1.3.3
@@ -43,7 +43,7 @@ fsspec==2023.5.0
 gast==0.5.4
 gitdb==4.0.10
 GitPython==3.1.31
-gmpy2 @ file:///tmp/build/80754af9/gmpy2_1645438755360/work
+gmpy2
 google-auth==2.18.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
@@ -51,7 +51,7 @@ googleapis-common-protos==1.59.0
 grpcio==1.54.0
 h5py==3.6.0
 huggingface-hub==0.14.1
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
+idna
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
 ipykernel==6.20.2
@@ -60,7 +60,7 @@ ipython==8.13.2
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
 jedi==0.18.2
-Jinja2 @ file:///croot/jinja2_1666908132255/work
+Jinja2
 joblib==1.2.0
 jsonschema==4.17.3
 jupyter==1.0.0
@@ -77,7 +77,7 @@ libclang==16.0.0
 librosa==0.9.1
 llvmlite==0.40.0
 Markdown==3.4.3
-MarkupSafe @ file:///opt/conda/conda-bld/markupsafe_1654597864307/work
+MarkupSafe
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mistune==2.0.5
@@ -92,14 +92,14 @@ nbclient==0.7.0
 nbconvert==7.4.0
 nbformat==5.8.0
 nest-asyncio==1.5.6
-networkx @ file:///croot/networkx_1678964333703/work
+networkx
 ninja==1.10.2.3
 notebook==6.5.4
 notebook_shim==0.2.3
 numba==0.57.0
 numpy==1.22.2
 oauthlib==3.2.2
-olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
+olefile
 opt-einsum==3.3.0
 packaging==23.1
 pandas==1.4.0
@@ -128,7 +128,7 @@ Pygments==2.15.1
 pyparsing==3.0.9
 pyroomacoustics==0.6.0
 pyrsistent==0.19.3
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
+PySocks
 pystoi==0.3.3
 python-dateutil==2.8.2
 pytorch-lightning==1.6.5
@@ -138,7 +138,7 @@ pyzmq==25.0.2
 qtconsole==5.4.3
 QtPy==2.3.1
 regex==2023.5.5
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
+requests
 requests-oauthlib==1.3.1
 resampy==0.4.2
 rsa==4.9
@@ -151,13 +151,13 @@ Send2Trash==1.8.2
 sentry-sdk==1.22.2
 setproctitle==1.3.2
 shortuuid==1.0.11
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+six
 smmap==5.0.0
 sniffio==1.3.0
 soundfile==0.12.1
 soupsieve==2.4.1
 stack-data==0.6.2
-sympy @ file:///croot/sympy_1668202399572/work
+sympy
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -190,7 +190,7 @@ traitlets==5.9.0
 trampoline==0.1.2
 triton==2.0.0
 typeguard==2.13.3
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1685045523825/work
+typing_extensions
 urllib3==1.26.15
 wandb==0.12.11
 wcwidth==0.2.6
